<resources>
    <string name="app_name">My GroceryList</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add First Item</string>
    <string name="enter_item">Enter Grocery Item</string>
    <string name="hint">Enter Item</string>
    <string name="quantityHint">Enter Quantity</string>
    <string name="buttonTextSave">Save</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="groceryName">Grocery name</string>
    <string name="groceryQuantity">Quantity</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
</resources>
