<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_id">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content"
                android:text="@string/enter_item"
                android:textSize="18sp"
                android:textStyle="italic"
                />

            <EditText
                android:id="@+id/groceryItem"
                android:layout_below="@id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint"
                android:layout_marginTop="15dp"
                />

            <EditText
                android:id="@+id/groceryQuantity"
                android:layout_below="@id/groceryItem"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantityHint"
                />

            <Button
                android:id="@+id/saveButton"
                android:layout_below="@id/groceryQuantity"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonTextSave"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"

                />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>