<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="23dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textAlert"
                android:text="@string/sure_text"
                android:paddingTop="5dp"
                android:layout_centerHorizontal="true"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/no_button"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:textColor="@android:color/white"
                android:layout_below="@+id/textAlert"
                android:layout_marginTop="15dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/yes_button"
                android:layout_alignParentRight="true"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:textColor="@android:color/white"
                android:layout_below="@+id/textAlert"
                android:layout_marginTop="15dp"
                android:layout_alignBottom="@+id/no_button"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>